added POLL_SLEEP, POLL_LIMIT to sample .env file, added verification for LOGON reponses

--- a/.env.example
+++ b/.env.example
@@ -33,5 +33,14 @@ INIT_SLEEP=60
 # Time to sleep between sending Heartbeat messages
 HEARTBEAT_SLEEP=10
 
+# Time to sleep between checking for new messages received
+POLL_SLEEP=5
+
+# Number of times to check(poll) for new messages
+POLL_LIMIT=10
+
 # Final Sleep delay - allow time to review Order changes in UI
-FINAL_SLEEP=20
+FINAL_SLEEP=10
+~                                                                                                                                                                                    
+
+
