--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -9,17 +9,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
 
     steps:
-      - uses: actions/checkout@v2
-      
-      # This action sets up Python 3.10 and will run on Node 20 by default
-      - name: Set up Python 3.12
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
-          python-version: '3.12'
+          python-version: ${{ matrix.python-version }}
+          
+      - uses: actions/checkout@v2
       
-      # Install Python dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
