--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,8 +26,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      
-      # Run tests using pytest
+          pip install pytest-cov
+
+      # Run tests using pytest with coverage
       - name: Run tests
         run: |
-          pytest -v
+          pytest -v --cov=./ --cov-report=xml
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
